# atmega328p-hal-driver

./: .clang-format  .gitignore  CHANGELOG  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md
.github/actions/avr-toolchain/: action.yml
.github/actions/test-requirements/: action.yml
.github/workflows/: checks.yml  compile.yml  compile_and_test.yml  test.yml
docs/: .readthedocs.yaml  Doxyfile  DoxygenLayout.xml  README.md  index.md
examples/: CMakeLists.txt  power.c  system.c
examples/power/: CMakeLists.txt
examples/system/: CMakeLists.txt  system.c
include/: hal.h  hal_clock.h  hal_internals.h  hal_io.h  hal_power.h  hal_system.h  hal_timer0.h  hal_usart.h
src/: hal_clock.c  hal_io.c  hal_power.c  hal_power_extra.c  hal_system.c  hal_timer0.c  hal_usart.c  hal_usart_extra.c
tests/: CMakeLists.txt  Makefile
tests/integration/common/: debug.c  debug.h
tests/mocks/: test_mock_up.c  test_mock_up.h
tests/mocks/avr/: interrupt.h  sfr_defs.h  sleep.h  wdt.h
tests/unit/: clock.c  hal.c  io.c  mock.c  power.c  system.c  timer0.c  usart.c
tests/unit/hal/: hal.c
tests/unit/io/: direction.c  io.c  io.h  read.c  toggle.c  write.c
tests/unit/mock/: mock.c
tests/unit/system/: system.c
tests/unit/usart/: direction.c  mode.c  stop_bits.c  usart.c  usart.h
